--- a/pages/_includes/navbar.html
+++ b/pages/_includes/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">  <!-- container -->
    <a id="logo" no-external="true" href="http://hl7.org/fhir"><img alt="logo fhir" src="assets/images/fhir-logo-www.png"/> </a>
    <div id="hl7-status">
-    <b>NCCN Templates<sup>®</sup> Initial Proposal</b>
+    <b>example Templates<sup>®</sup> Initial Proposal</b>
    </div>
 
    <div id="hl7-nav">
